# cpp-chess

./: AI.cpp  AI.h  AI_basic.cpp  AI_basic.h  AI_tree.cpp  AI_tree.h  CMakeLists.txt  README.md  bishop.cpp  bishop.h  black_win.chess  checkboard.cpp  checkboard.h  chess  chess.cpp  empty.cpp  empty.h  enpassant.chess  figure.cpp  figure.h  gameplay.cpp  gameplay.h  human.cpp  human.h  king.cpp  king.h  king_and_rook.chess  knight.cpp  knight.h  logger.cpp  logger.h  move.cpp  move.h  not_castling.chess  pawn.cpp  pawn.h  pawns.chess  player.cpp  player.h  promotion.chess  (+10 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
samples/: black_win.chess  bug.chess  draw_bug.chess  draw_bug2.chess  end.chess  end2.chess  enpassant.chess  h.chess  king_and_rook.chess  not_castling.chess  ola.chess  promotion.chess  s.chess  sample1.chess  sample10.chess  small.chess  white_win.chess
tests/: chesstestrunner.cpp  newtestclass.cpp  newtestclass.h  newtestrunner.cpp  queen_test.cpp  queen_test.h
